--- a/ProjectBuildaPortfolioSite/index.html
+++ b/ProjectBuildaPortfolioSite/index.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio Project</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
    
   </head>
   <body>
 
     <header class="header">
-        <div class="header__div">
-            <img class="header__logo" src="img/udacity.svg" alt="Udacity logo">
-            <h1 class="header__name">TOMASZ NIZIOL</h1>
-            <h3 class="header__title">FRONT-END NINJA</h3>
+        <div class="header__img">
+            <img src="img/udacity.svg" alt="Udacity logo">
         </div>
+        <div class="header__text">
+            <h1 class="header__name">Tomasz Niziol</h1>
+            <h3 class="header__title">Front-End Ninja</h3>
+        </div>
+        
 
     </header>
 
-    <nav >
-    </nav>
-
+    
     <main >
    
         <section>
