--- a/ProjectBuildaPortfolioSite/index.html
+++ b/ProjectBuildaPortfolioSite/index.html
@@ -29,17 +29,24 @@
 
        <section class="featuredWork">
             <h3>Featured Work</h3>
-            <div> 
+            <div class="portfolio-1"> 
                 <img src="img/" alt="First portfolio img">
-                <p>Appify</p>
+                <article class="article-1">
+                    <p>Appify</p>
+
+                </article>
             </div>
-            <div> 
+            <div class="portfolio-2"> 
                 <img src="img/" alt="Second portfolio img">
-                <p>Sunflower</p>
+                <article class="article-2">
+                    <p>Sunflower</p>
+                </article>
             </div>
-            <div> 
+            <div class="portfolio-3"> 
                 <img src="img/" alt="Third portfolio img">
-                <p>Bokeh</p>
+                <article class="article-3">
+                    <p>Bokeh</p>
+                </article>
             </div>
         </section>
     </main>
