--- a/ProjectBuildaPortfolioSite/index.html
+++ b/ProjectBuildaPortfolioSite/index.html
@@ -33,19 +33,21 @@
                 <img src="img/" alt="First portfolio img">
                 <article class="article-1">
                     <p>Appify</p>
-
+                    <a href="https://">Link 1</a>
                 </article>
             </div>
             <div class="portfolio-2"> 
                 <img src="img/" alt="Second portfolio img">
                 <article class="article-2">
                     <p>Sunflower</p>
+                    <a href="https://">Link 2</a>
                 </article>
             </div>
             <div class="portfolio-3"> 
                 <img src="img/" alt="Third portfolio img">
                 <article class="article-3">
                     <p>Bokeh</p>
+                    <a href="https://"> Link 3</a>
                 </article>
             </div>
         </section>
