--- a/ProjectBuildaPortfolioSite/index.html
+++ b/ProjectBuildaPortfolioSite/index.html
@@ -28,22 +28,24 @@
         </section>
 
        <section class="featuredWork">
-            <h3>Featured Work</h3>
-            <div class="portfolio-1"> 
+            
+                <h1>Featured Work</h1>
+               
+            <div class="portfolio"> 
                 <img src="img/" alt="First portfolio img">
                 <article class="article-1">
                     <p>Appify</p>
                     <a href="https://">Link 1</a>
                 </article>
             </div>
-            <div class="portfolio-2"> 
+            <div class="portfolio"> 
                 <img src="img/" alt="Second portfolio img">
                 <article class="article-2">
                     <p>Sunflower</p>
                     <a href="https://">Link 2</a>
                 </article>
             </div>
-            <div class="portfolio-3"> 
+            <div class="portfolio"> 
                 <img src="img/" alt="Third portfolio img">
                 <article class="article-3">
                     <p>Bokeh</p>
