--- a/ProjectBuildaPortfolioSite/index.html
+++ b/ProjectBuildaPortfolioSite/index.html
@@ -61,7 +61,16 @@
 		   </div>
         </section>
     </main>
-
+    
+     <footer class="page-footer">
+        <section class="about-company">
+      <h3>
+        About me
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      </p>
+    </footer>
     
 </body>
 </html>
