--- a/ProjectBuildaPortfolioSite/index.html
+++ b/ProjectBuildaPortfolioSite/index.html
@@ -24,7 +24,7 @@
     <main >
    
         <section class="mainPhoto">
-            <h1></h1>
+            <h6></h6>
             <img src="img/laptop-3242862_1280.jpg" alt="Photo of something important :)">
         </section>
 
@@ -64,12 +64,13 @@
     
      <footer class="page-footer">
         <section class="about-company">
-      <h3>
-        About me
-      </h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      </p>
+	      <h3>
+		About me
+	      </h3>
+	      <p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+	      </p>
+	</section>
     </footer>
     
 </body>
